<resources>
    <string name="app_name">CMA</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="medCheckQ1"><![CDATA[Merasa Demam (suhu > 37 C)?]]></string>
    <string name="medCheckQ2">Merasa Sakit Tenggorokan?</string>
    <string name="medCheckQ3">Merasa Batuk?</string>
    <string name="medCheckQ4">Merasa Pilek?</string>
    <string name="medCheckQ5">Merasa Diare?</string>
    <string name="medCheckQ6">Merasa Sesak?</string>
    <string name="medCheckQ7">Merasa Pusing?</string>
    <string name="medCheckQ8">Merasa Lesu/Nyeri Badan?</string>
    <string name="medCheckE">Keluhan Lain</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="take_photo">Take Photo</string>
    <string name="submit">Submit</string>
    <string name="adHdr1">Personal Information</string>
    <string name="namaCust">Goro Depeno</string>
    <string name="dash">-</string>
    <string name="adIdCust">Id Customer</string>
    <string name="adSpouse">Spouse Name</string>
    <string name="adDob">DOB</string>
    <string name="ademergencyCtc">Emergency Contact</string>
    <string name="adAgama">Agama</string>
    <string name="adResidence">Residence</string>
    <string name="adLegal">Legal</string>
    <string name="adCompanyName">Company Name</string>
    <string name="adCompanyAddr">Company</string>
    <string name="adHdr2">Credit Information</string>
    <string name="adNoAggr">Nomor Aggrement</string>
    <string name="adNtf">NTF</string>
    <string name="adPlat">License Plate</string>
    <string name="adTenor">Tenor</string>
    <string name="adModel">Model</string>
    <string name="adAggrementDate">Agreement Date</string>
    <string name="adColor">Color</string>
    <string name="adChassis">Chassis No.</string>
    <string name="adEngineNo">Engine No.</string>
    <string name="adHdr3">Contact Information</string>
    <string name="admail">Email Address</string>
    <string name="adphone">Phone No.</string>
    <string name="adcompanyCtc">Company Contact</string>
    <string name="adspouseCtc">Spouse Contact</string>
    <string name="adosp">OS Principal</string>
    <string name="adosi">OS Interest</string>
    <string name="adinstallmentDue">Installment Due</string>
    <string name="adaccruedInterest">Accured Interest</string>
    <string name="adlc">Late Charge</string>
    <string name="adpinalty">Full Payment Penalty</string>
    <string name="adothers">Others</string>
    <string name="adtotal">Total</string>
    <string name="adHdr4">Outstanding Payment</string>
    <string name="adHdr5">Collection Information</string>
    <string name="adcollector">Last Collector</string>
    <string name="adnplDate">NPL Date</string>
    <string name="adcaseCategory">Case Category</string>
    <string name="adwoDate">WO Date</string>
    <string name="adralNo">RAL No.</string>
    <string name="adnotes">Notes</string>
    <string name="direction">Direction</string>
    <string name="report">Report</string>
    <string name="infoupd">Info Update</string>
    <string name="reco">Rec Option</string>
    <string name="locate">Locate</string>
    <string name="tab_text">Addresses</string>
    <string name="tab_text1">Contacts</string>
    <string name="tab_text2">Over Asset</string>
    <string name="tab_text3">Mitra</string>
    <string name="adresses">Adresses</string>
    <string name="contacts">Contacts</string>
    <string name="asset">Asset</string>
    <string name="infomitra">Info Mitra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hdr_main">Collection Management App</string>
    <string name="hdr_main_demo">CMA Demo</string>
    <string name="usernameDemo">Sunu Dioh</string>
    <string name="useridDemo">327 320 3110</string>
    <string name="homeDL">Home</string>
    <string name="taskDL">Task</string>
    <string name="inboxDL">Inbox</string>
    <string name="settingDL">Setting</string>
    <string name="dashboardDL">Dashboard</string>
    <string name="logoutDL">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="show">Show</string>
    <string name="reset">Reset</string>
    <string name="idNumber">ID Number</string>
    <string name="phoneNo">Phone No.</string>
    <string name="email">Email</string>
    <string name="studioh_gmail_com">studioh@gmail.com</string>
    <string name="idNumberDemo">3273201104890001</string>
    <string name="dateBirthDemo">29 Feb 1989</string>
    <string name="tglLahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="alamatDemo">Blok U5/30 Sektor IVX-5</string>
    <string name="namaDemo">Sunu Dioh</string>
    <string name="nama">Nama</string>
    <string name="mn_attendance">Attendance</string>
    <string name="mn_route">Route</string>
    <string name="mn_partner">Partner</string>
    <string name="mn_add">Add</string>
    <string name="mn_appointment">Appointment</string>
    <string name="mn_recovery">Recovery</string>
    <string name="mn_archive">Archive</string>
    <string name="mn_find">Find</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="adMarketPrice">Market Price</string>
    <string name="fbDemo">/d.4ths</string>
    <string name="twitterDemo">\@d.4th</string>
</resources>