<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="4"
                android:text="Deskripsi"
                android:gravity="center"
                android:padding="3dip" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Ya"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>
    <CheckBox
        android:id="@+id/demam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ1"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toTopOf="parent"/>
    <CheckBox
        android:id="@+id/tenggorokan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ2"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/demam"/>
    <CheckBox
        android:id="@+id/batuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ3"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/tenggorokan"/>
    <CheckBox
        android:id="@+id/pilek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ4"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/batuk"/>
    <CheckBox
        android:id="@+id/diare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ5"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/pilek"/>
    <CheckBox
        android:id="@+id/sesak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ6"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/diare"/>
    <CheckBox
        android:id="@+id/pusing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ7"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/sesak"/>
    <CheckBox
        android:id="@+id/lesu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckQ8"
        android:button="@null"
        android:textColor="#808080"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@id/pusing"/>
    <EditText
        android:id="@+id/keluhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:text="@string/medCheckE"
        android:textColor="#808080"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/lesu"/>
    <Button
        android:id="@+id/submit"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/submit"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/keluhan"/>
</androidx.constraintlayout.widget.ConstraintLayout>