<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/direction"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/locate"
        android:textSize="11sp"
        android:drawableTop="@drawable/pin_smaller"
        android:padding="8dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/report"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/report"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/report"
        android:textSize="11sp"
        android:drawableTop="@drawable/report_smaller"
        android:padding="8dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/direction"
        app:layout_constraintEnd_toStartOf="@+id/infoupd"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/infoupd"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/infoupd"
        android:textSize="11sp"
        android:drawableTop="@drawable/updinfo_smaller"
        android:padding="8dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/report"
        app:layout_constraintEnd_toStartOf="@+id/reco"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/reco"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/reco"
        android:textSize="11sp"
        android:drawableTop="@drawable/reco_smaller"
        android:padding="5dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/infoupd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>