<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/adHdr1"
                android:textColor="@color/green_A900"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/namaCust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namaCust"
                android:layout_marginTop="45dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/idCust"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/namaCust"
                app:layout_constraintEnd_toStartOf="@+id/spouse"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/spouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/namaCust"
                app:layout_constraintStart_toEndOf="@+id/idCust"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/idCustLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adIdCust"
                android:layout_marginStart="18dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/idCust"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/spouseLbl"/>
            <TextView
                android:id="@+id/spouseLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adSpouse"
                android:layout_marginEnd="18dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/idCust"
                app:layout_constraintStart_toEndOf="@id/idCustLbl"
                app:layout_constraintEnd_toEndOf="parent"/>
            <!--new section-->
            <TextView
                android:id="@+id/dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginTop="6dp"
                android:layout_marginStart="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/idCustLbl"
                app:layout_constraintEnd_toStartOf="@+id/emergencyCtc"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/emergencyCtc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/spouseLbl"
                app:layout_constraintStart_toEndOf="@+id/dob"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/dobLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adDob"
                android:layout_marginStart="18dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/dob"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/emergencyCtcLbl"/>
            <TextView
                android:id="@+id/emergencyCtcLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ademergencyCtc"
                android:layout_marginEnd="18dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/emergencyCtc"
                app:layout_constraintStart_toEndOf="@id/dobLbl"
                app:layout_constraintEnd_toEndOf="parent"/>
            <!--new section-->
            <TextView
                android:id="@+id/agama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/dobLbl"
                app:layout_constraintEnd_toStartOf="@+id/companyName"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/companyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/emergencyCtcLbl"
                app:layout_constraintStart_toEndOf="@+id/agama"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/agamaLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adAgama"
                android:layout_marginStart="18dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/agama"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/companyNameLbl"/>
            <TextView
                android:id="@+id/companyNameLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adCompanyName"
                android:layout_marginEnd="18dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/companyName"
                app:layout_constraintStart_toEndOf="@id/agamaLbl"
                app:layout_constraintEnd_toEndOf="parent"/>
            <!--new section-->
            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:text="@string/dash"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/companyNameLbl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/address1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adResidence"
                android:layout_marginStart="18dp"
                android:textSize="12sp"
                android:textColor="@color/blue_800"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/address2"/>
            <TextView
                android:id="@+id/address2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adLegal"
                android:textSize="12sp"
                android:textColor="@color/blue_800"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toEndOf="@id/address1"
                app:layout_constraintEnd_toStartOf="@id/address3"/>
            <TextView
                android:id="@+id/address3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/adCompanyAddr"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="15dp"
                android:textSize="12sp"
                android:textColor="@color/blue_800"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toEndOf="@id/address2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>